# data-engineering-test

./: .gitignore  data_validation_checks.py  invoice_data_preprocess.py  local_data_handler.py  pyproject.toml  test_1_solution.py  test_1_solution_test.py  test_2_solution.py  test_2_solution_test.py  test_3_solution.py  test_3_solution_test.py  test_4_solution.py  test_4_solution_test.py  test_5_solution.py  test_5_solution_test.py
resources/: invoicing_data_flat.json
