[project]
name = "ifco-data-engineering-test"
version = "0.1.0"
description = "Solutions to data engineering test for IFCO."
authors = [
    {name = "n.montia@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=3.5.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
